<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  	android:layout_width="fill_parent"
  	android:layout_height="fill_parent"
  	android:layout_marginLeft="5dip"
  	android:layout_marginRight="5dip"> 
  	
    <View 
  		android:id="@+id/view_separator1"
		android:layout_width="85dip"
		android:layout_height="3dip"
		android:background="#FFFF0000"
		android:layout_marginLeft="371dip"
		android:layout_toRightOf="@id/ll_buttons"/>
  	
    <View 
  		android:id="@+id/view_separator2"
		android:layout_width="fill_parent"
		android:layout_height="2dip"
		android:background="@color/black"
		android:layout_marginLeft="5dip"
		android:layout_marginTop="3dip"
		android:layout_toRightOf="@id/ll_buttons"
		android:layout_below="@id/view_separator1"/>
  	
  	<TextView  
  	  	android:id="@+id/tv_status"
  	  	android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
      	android:text="@string/question_status"  
      	android:textStyle="bold"
      	android:textSize="14sp"
      	android:textColor="@color/black"
      	android:layout_marginTop="10dip"
      	android:layout_below="@id/view_separator1"
      	android:layout_centerHorizontal="true"/>
  
	<TableLayout
	  	android:id="@+id/tl_status" 
	  	android:layout_width="fill_parent"
	  	android:layout_height="wrap_content"
	  	android:shrinkColumns="*"  
    	android:stretchColumns="*"
    	android:layout_below="@id/tv_status">
    	
	    <View
			android:id="@+id/view_separator"  
			android:layout_width="fill_parent"
			android:layout_height="1dip"
			android:background="@color/white"
			android:layout_marginLeft="5dip"
			android:layout_marginTop="5dip"
			android:layout_below="@id/tv_title"/>
	  	
	  	<TableRow 
	  		android:id="@+id/tr_row"
	  		android:layout_width="wrap_content"
	   	  	android:layout_height="wrap_content">
	   	  	
	  	    <TextView  
		  	  	android:id="@+id/tv_check"
		      	android:text="  "  
		      	android:textColor="@color/black"
		      	android:layout_gravity="center"/>
	   	  	
	  	    <TextView  
		  	  	android:id="@+id/tv_details"
		      	android:text="@string/details"  
		      	android:textColor="@color/black"
		      	android:layout_gravity="center"/>
	  	
		  	<TextView  
		  	  	android:id="@+id/tv_number"
		      	android:text="@string/number"  
		      	android:textColor="@color/black"
		      	android:layout_gravity="center"/>
		  	       
		  	<TextView  
		      	android:id="@+id/tv_question" 
		      	android:text="@string/owner"    
		      	android:textColor="@color/black"
		      	android:layout_gravity="center"/>
		  	
		  	<TextView  
		  	  	android:id="@+id/tv_ip"
		      	android:text="@string/ip"  
		      	android:textColor="@color/black"
		      	android:layout_gravity="center"
		      	android:layout_marginLeft="20dip"/>
		           
		  	<TextView  
		    	android:id="@+id/tv_answers"  
		      	android:text="@string/correct"   
		      	android:textColor="@color/black"
		      	android:layout_gravity="center"/>
		           
		  	<TextView  
		      	android:id="@+id/tv_score"  
		      	android:text="@string/rating_table"    
		      	android:textColor="@color/black"
		      	android:layout_gravity="center"
		      	android:lines="2"/>
	  	
	  	</TableRow>
	  	
	  	<View
			android:id="@+id/view_separator"  
			android:layout_width="fill_parent"
			android:layout_height="1dip"
			android:background="@color/white"
			android:layout_marginLeft="5dip"
			android:layout_below="@id/tv_title"/>
	  	
	  	<ListView 
			android:id="@+id/lv_questions"
		    android:layout_width="fill_parent"
		  	android:layout_height="210dip"
		  	android:layout_below="@id/tr_row"
		  	android:layout_marginLeft="5dip"/>
		  	
		<View
			android:id="@+id/view_separator"  
			android:layout_width="fill_parent"
			android:layout_height="1dip"
			android:background="@color/white"
			android:layout_marginLeft="5dip"
			android:layout_marginTop="5dip"
			android:layout_below="@id/lv_questions"/>

	</TableLayout>
	
	<Button 
  		android:id="@+id/bt_save"
  		android:layout_width="120dip"
  		android:layout_height="50dip"
  		android:layout_gravity="center_horizontal"
  		android:text="@string/save_questions"
  		android:textSize="12sp"
  		android:layout_marginTop="10dip"
  		android:layout_marginRight="10dip"
  		android:layout_below="@id/tl_status"
  		android:layout_alignParentRight="true"/>
	
</RelativeLayout>