<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
  	android:layout_width="330dip"
  	android:layout_height="wrap_content"
  	android:orientation="vertical"
  	android:background="@drawable/rounded_border"
  	android:layout_gravity="center">
  
  	<TextView 
	  	android:id="@+id/tv_title"
	  	android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dip"
		android:layout_gravity="center_horizontal"
		android:text="@string/use_prepared"
		android:textColor="@color/black"
		android:textSize="14sp"
		android:textStyle="bold"/>
		
	<View
		android:id="@+id/view_separator"  
		android:layout_width="fill_parent"
		android:layout_height="1dip"
		android:background="@color/white"
		android:layout_margin="5dip"/>
	
	<TextView 
	  	android:id="@+id/tv_select_item"
	  	android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dip"
		android:layout_gravity="center_horizontal"
		android:text="@string/select"
		android:textColor="@color/black"
		android:textSize="14sp"/>
	
	<ListView 
	    android:id="@+id/android:list"
	    android:layout_width="fill_parent"
	    android:layout_height="80dip"
	    android:layout_gravity="center_horizontal"
	    android:layout_marginLeft="20dip"
		android:layout_marginRight="20dip"
	    android:layout_marginTop="10dip"
	    android:layout_marginBottom="10dip"
	    android:choiceMode="singleChoice"/>
	
	<View
		android:id="@+id/view_separator"  
		android:layout_width="fill_parent"
		android:layout_height="1dip"
		android:background="@color/white"
		android:layout_marginLeft="20dip"
	    android:layout_marginRight="20dip"/>
	
	<CheckBox 
	    android:id="@+id/cb_questions"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="18dip"
	    android:text="@string/use_time"
	    android:textColor="@color/black"
	    android:textSize="14sp"/>
	
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_marginLeft="20dip"
		android:layout_marginRight="20dip"
		android:layout_marginBottom="10dip"
		android:gravity="center">
		
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="h:"
	        android:textColor="@color/black"/>
	    
		<Spinner 
		    android:id="@+id/sp_hours"
		    android:layout_width="83dip"
		    android:layout_height="wrap_content"		    
		    android:prompt="@string/hours"/>
		
		<TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="m:"
	        android:textColor="@color/black"/>
		
		<Spinner 
		    android:id="@+id/sp_minutes"
		    android:layout_width="83dip"
		    android:layout_height="wrap_content"
		    android:prompt="@string/minutes"/>
		
		<TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="s:"
	        android:textColor="@color/black"/>    
		    
		<Spinner 
		    android:id="@+id/sp_seconds"
		    android:layout_width="83dip"
		    android:layout_height="wrap_content"
		    android:prompt="@string/seconds"/>
	    
	</LinearLayout>
	
	<View
		android:id="@+id/view_separator"  
		android:layout_width="fill_parent"
		android:layout_height="1dip"
		android:background="@color/white"
		android:layout_marginLeft="20dip"
	    android:layout_marginRight="20dip"/>
			
	<Button 
  		android:id="@+id/bt_ok"
  		android:layout_width="100dip"
  		android:layout_height="50dip"
  		android:layout_gravity="center_horizontal"
  		android:text="@string/ok"
  		android:textSize="12sp"
  		android:layout_marginTop="10dip"
  		android:layout_marginBottom="10dip"/>					
    
</LinearLayout>
