<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@color/gray">
		
	<RelativeLayout 
		android:id="@+id/ll_buttons"
		android:layout_width="130dip"
		android:layout_height="fill_parent"
		android:layout_marginTop="10dip"
		android:layout_alignParentLeft="true">
		
	    <TextView
	  		android:id="@+id/tv_title_server"
	  		android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		android:text="@string/server_connected"
	  		android:textColor="@color/black"
	  		android:textSize="14sp"
	  		android:layout_alignParentTop="true"
	  		android:layout_marginTop="5dip"
	  		android:layout_centerHorizontal="true"/>
	    
	    <TextView
	  		android:id="@+id/tv_server"
	  		android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		android:textColor="@color/black"
	  		android:textSize="14sp"
	  		android:layout_below="@id/tv_title_server"
	  		android:layout_centerHorizontal="true"/>
	  		
		<Button 
	  		android:id="@+id/bt_solve"
	  		android:layout_width="120dip"
	  		android:layout_height="50dip"
	  		android:text="@string/start_solving"
	  		android:textSize="12sp"
	  		android:layout_marginTop="10dip"
	  		android:layout_below="@id/tv_server"
	  		android:layout_centerHorizontal="true"/>
	  		
		<Button 
	  		android:id="@+id/bt_results"
	  		android:layout_width="120dip"
	  		android:layout_height="50dip"
	  		android:text="@string/show_results"
	  		android:textSize="12sp"
	  		android:layout_marginTop="10dip"
	  		android:layout_marginBottom="150dip"
	  		android:layout_below="@id/bt_solve"
	  		android:layout_centerHorizontal="true"/>	
	  		
		<TextView
	  		android:id="@+id/tv_time"
	  		android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		android:textColor="@color/black"
	  		android:textSize="14sp"
	  		android:layout_marginTop="5dip"
	  		android:layout_centerHorizontal="true"
	  		android:layout_alignParentBottom="true"/>
		
		<TextView
	  		android:id="@+id/tv_remaining_time"
	  		android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		android:text="@string/remaining_time"
	  		android:textColor="@color/black"
	  		android:textSize="14sp"
	  		android:layout_above="@id/tv_time"
	  		android:layout_centerHorizontal="true"/>		  
	
	</RelativeLayout>
		
	<TextView
  		android:id="@+id/tv_students"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:text="@string/students"
  		android:textColor="@color/black"
  		android:textSize="20sp"
  		android:textStyle="bold"
  		android:layout_marginTop="15dip"
  		android:layout_marginLeft="100dip"
  		android:layout_toRightOf="@id/ll_buttons"/>
  		
	<TextView
  		android:id="@+id/tv_questions"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:text="@string/questions"
  		android:textColor="@color/black"
  		android:textSize="20sp"
  		android:textStyle="bold"
  		android:layout_marginTop="15dip"
  		android:layout_marginLeft="180dip"
  		android:layout_toRightOf="@id/tv_students"/>
  	
	<View
		android:id="@+id/view_separator2" 
		android:layout_width="2dip"
		android:layout_height="fill_parent"
		android:background="@color/black"
		android:layout_toRightOf="@id/ll_buttons"/>
	
	<LinearLayout
	    android:id="@+id/ll_container_fragment"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical"
	    android:layout_toRightOf="@id/ll_buttons"
	    android:layout_below="@id/tv_students"
	    android:layout_marginTop="5dip">
	
		<android.support.v4.view.ViewPager
		    android:id="@+id/vp_awesomepager"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
	
	</LinearLayout>  	
  
</RelativeLayout>
