<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  	android:layout_width="fill_parent"
  	android:layout_height="fill_parent"
  	android:layout_marginLeft="5dip"
  	android:layout_marginRight="5dip">
  	
    <View 
  		android:id="@+id/view_separator1"
		android:layout_width="85dip"
		android:layout_height="3dip"
		android:background="#FFFF0000"
		android:layout_marginLeft="100dip"
		android:layout_toRightOf="@id/ll_buttons"/>
  	
    <View 
  		android:id="@+id/view_separator2"
		android:layout_width="fill_parent"
		android:layout_height="2dip"
		android:background="@color/black"
		android:layout_marginLeft="5dip"
		android:layout_marginRight="5dip"
		android:layout_marginTop="3dip"
		android:layout_toRightOf="@id/ll_buttons"
		android:layout_below="@id/view_separator1"/>
  	
  	<TextView  
  	  	android:id="@+id/tv_status"
  	  	android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
      	android:text="@string/students_status"  
      	android:textStyle="bold"
      	android:textSize="14sp"
      	android:textColor="@color/black"
      	android:layout_marginTop="10dip"
      	android:layout_below="@id/view_separator1"
      	android:layout_centerHorizontal="true"/>
  
	<TableLayout
	  	android:id="@+id/tl_status" 
	  	android:layout_width="fill_parent"
	  	android:layout_height="wrap_content"
	  	android:shrinkColumns="*"  
    	android:stretchColumns="*"
    	android:layout_below="@id/tv_status"
    	android:layout_marginRight="5dip">
    	
    	<View
			android:id="@+id/view_separator"  
			android:layout_width="fill_parent"
			android:layout_height="1dip"
			android:background="@color/white"
			android:layout_marginLeft="5dip"
			android:layout_marginTop="5dip"
			android:layout_below="@id/tv_title"/>
	  	
	  	<TableRow 
	  		android:id="@+id/tr_row"
	  		android:layout_width="wrap_content"
	   	  	android:layout_height="wrap_content"
	   	  	android:layout_marginTop="5dip">
	  	
		  	<TextView  
		  	  	android:id="@+id/tv_name"
		      	android:text="@string/students_name"
		      	android:textColor="@color/black"
		      	android:layout_gravity="center"/>
		           
		  	<TextView  
		      	android:id="@+id/tv_question" 
		      	android:text="@string/question"   
		      	android:textColor="@color/black"
		      	android:layout_gravity="center"/>
		           
		  	<TextView  
		    	android:id="@+id/tv_answers"  
		      	android:text="@string/answers"   
		      	android:textColor="@color/black"
		      	android:layout_gravity="center"/>
		           
		  	<TextView  
		      	android:id="@+id/tv_score"  
		      	android:text="@string/score"    
		      	android:textColor="@color/black"
		      	android:layout_gravity="center"/>
	  	
	  	</TableRow>
	  	
	  	<View
			android:id="@+id/view_separator_list"  
			android:layout_width="fill_parent"
			android:layout_height="1dip"
			android:background="@color/white"
			android:layout_marginLeft="5dip"
			android:layout_marginTop="5dip"
			android:layout_below="@id/tv_title"/>
	  	
	  	<ListView 
			android:id="@+id/lv_students"
		    android:layout_width="wrap_content"
		  	android:layout_height="180dip"
		  	android:layout_below="@id/tl_status"
		  	android:layout_above="@id/view_separator_list"
		  	android:layout_marginLeft="5dip"/>

	</TableLayout>
	
	<TextView  
  	  	android:id="@+id/tv_total"
  	  	android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
      	android:text="@string/total"  
      	android:textStyle="bold"
      	android:textSize="14sp"
      	android:textColor="@color/black"
      	android:layout_below="@id/tl_status"
      	android:layout_marginTop="5dip"
      	android:layout_centerHorizontal="true"/>
      	
	<View
		android:id="@+id/view_separator"  
		android:layout_width="fill_parent"
		android:layout_height="1dip"
		android:background="@color/white"
		android:layout_marginLeft="5dip"
		android:layout_marginTop="5dip"
		android:layout_marginRight="5dip"
		android:layout_below="@id/tv_total"/>      	
	 
    <TableLayout
	  	android:id="@+id/tl_total" 
	  	android:layout_width="fill_parent"
	  	android:layout_height="wrap_content"
	  	android:shrinkColumns="*"  
    	android:stretchColumns="*"
    	android:layout_below="@id/tv_total">
	  	
	  	<TableRow 
	  		android:id="@+id/tr_row"
	  		android:layout_width="wrap_content"
	   	  	android:layout_height="wrap_content"
	   	  	android:layout_margin="5dip">
    	
	    	<TextView  
		  	  	android:id="@+id/tv_total_students"
		  	  	android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
		      	android:textColor="@color/black"
		      	android:layout_gravity="center"
		      	android:layout_marginTop="6dip"/>
		           
		  	<TextView  
		      	android:id="@+id/tv_total_questions" 
		      	android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
		      	android:textColor="@color/black"
		      	android:layout_gravity="center"
		      	android:layout_marginTop="6dip"/>
		           
		  	<TextView  
		    	android:id="@+id/tv_total_answers"  
		    	android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
		      	android:textColor="@color/black"
		      	android:layout_gravity="center"
		      	android:layout_marginTop="6dip"/>
	    	
	    </TableRow>
    
	</TableLayout>
	
	<View
		android:id="@+id/view_separator"  
		android:layout_width="fill_parent"
		android:layout_height="1dip"
		android:background="@color/white"
		android:layout_marginLeft="5dip"
		android:layout_marginTop="5dip"
		android:layout_marginRight="5dip"
		android:layout_below="@id/tl_total"/>
	
	<TextView  
  	  	android:id="@+id/tv_top_scorers"
  	  	android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
      	android:text="@string/top_scores"  
      	android:textStyle="bold"
      	android:textSize="14sp"
      	android:textColor="@color/black"
      	android:layout_below="@id/view_separator"
      	android:layout_marginTop="5dip"
      	android:layout_centerHorizontal="true"/>
    
    <LinearLayout
    	android:id="@+id/ll_top_scorers" 
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/tv_top_scorers"
    	android:orientation="vertical"
    	android:layout_marginRight="5dip">
    	
    	<View
			android:id="@+id/view_separator"  
			android:layout_width="fill_parent"
			android:layout_height="1dip"
			android:background="@color/white"
			android:layout_marginLeft="5dip"
			android:layout_marginTop="5dip"
			android:layout_below="@id/tl_total"/>
    	
  		<TextView  
	    	android:id="@+id/tv_top_scorers_top"  
	    	android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
	      	android:text="@string/top_scorer"
	      	android:textColor="@color/black"
	      	android:layout_marginLeft="5dip"
	      	android:layout_marginTop="5dip"/>
	      	
	    <TextView  
	    	android:id="@+id/tv_top_scorers_rating"  
	    	android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
	      	android:text="@string/rating"
	      	android:textColor="@color/black"
	      	android:layout_marginLeft="5dip"/>
	      	
<!-- 	    <TextView   -->
<!-- 	    	android:id="@+id/tv_top_scorers_creator"   -->
<!-- 	    	android:layout_width="wrap_content" -->
<!--     		android:layout_height="wrap_content" -->
<!-- 	      	android:text="@string/created_by" -->
<!-- 	      	android:textColor="@color/black" -->
<!-- 	      	android:layout_marginLeft="5dip" -->
<!-- 	      	android:layout_marginBottom="5dip"/> -->
	      	
		<View
			android:id="@+id/view_separator"  
			android:layout_width="fill_parent"
			android:layout_height="1dip"
			android:background="@color/white"
			android:layout_marginLeft="5dip"
			android:layout_below="@id/tv_top_scorers_rating"/>			      	
	
	</LinearLayout>
	
	<View
		android:id="@+id/view_separator2" 
		android:layout_width="2dip"
		android:layout_height="fill_parent"
		android:background="@color/black"
		android:layout_alignParentRight="true"
		android:layout_centerVertical="true"/>        
  
</RelativeLayout>